# Velocity_Engine

./: CMakeLists.txt  ITCH.h  LockFreeQueue.h  Order.h  OrderBook.cpp  OrderBook.h  main.cpp  message_data.txt  readme.md  send_orders.py
